tests/regression/errors/duplicate_let.eff
let x = 5
and y = 6
and x = 7
in x + y
